dnl Initialise autoconf

AC_INIT(src/process.cpp)
AM_CONFIG_HEADER(config.h)

dnl Initialise automake

AM_INIT_AUTOMAKE(process, 0.0.0)

dnl Test for C++ compiler

AC_PROG_CXX

CXXFLAGS="$CXXFLAGS -Wall"

AC_LANG_CPLUSPLUS
AC_REQUIRE_CPP

dnl Test for WorldForge Atlas Libraries

PKG_CHECK_MODULES(WF, skstream-0.2 >= 0.2.4 atlascpp-0.4 >= 0.4.5 ,
    [
        CPPFLAGS="$CPPFLAGS $WF_CFLAGS"
        LIBS="$LIBS $WF_LIBS"
    ],
    [
        AC_MSG_ERROR(Couldn't find WF libs.)
    ])

dnl allow the user to provide the directory where python is installed in
dnl
AC_CACHE_CHECK(for location of python, python_prefix,
[
	python_prefix=/usr
	AC_ARG_WITH(python,
	[ --with-python=DIR          directory python is installed in [default=/usr]],
	[
		if test $withval != yes; then
			python_prefix=$withval
		fi
	])
])

dnl then check for the header file Python.h and set
dnl python_include_path and python_version
dnl appropriately to what we have found
dnl

AC_CHECK_HEADER(python2.2/Python.h,
	[ python_include_path=-I${python_prefix}/include/python2.2
	  python_version=python2.2
        ],[
	AC_CHECK_HEADER(python2.1/Python.h,
		[ python_include_path=-I${python_prefix}/include/python2.1
		  python_version=python2.1
       		],[
		AC_CHECK_HEADER(python2.0/Python.h,
			[ python_include_path=-I${python_prefix}/include/python2.0
			  python_version=python2.0
			],[
			AC_CHECK_HEADER(python1.6/Python.h, 
				[ python_include_path=-I${python_prefix}/include/python1.6
				  python_version=python1.6
        	                ],[
				AC_CHECK_HEADER(python1.5/Python.h, 
					[ python_include_path=-I${python_prefix}/include/python1.5
					  python_version=python1.5
	                                ])
				])
			])
		])
	])

AC_CHECK_LIB(dl,main)
AC_CHECK_LIB(pthread,main)

PYTHON_INCLUDES=${python_include_path}
CPPFLAGS="$CPPFLAGS ${PYTHON_INCLUDES}"

dnl Check for libutil, which Python requires on some
dnl platforms. If libutil is missing, obviously Python
dnl won't depend on it.
AC_CHECK_LIB(util, openpty, [LIBS="$LIBS -lutil"])

dnl build the library path from the found version
python_lib_path=${python_prefix}/lib/${python_version}/config

AC_CHECK_LIB(${python_version},
    Py_Initialize,
    [python_libs="-L${python_lib_path} -l${python_version}"],
    AC_MSG_ERROR(Couldn't find Python library),
    [-L${python_lib_path}]
)

PYTHON_LIBS=${python_libs}
LIBS="$LIBS $PYTHON_LIBS"

dnl ... done with python checks
dnl -----------------------------------------------------------------

AM_PATH_CPPUNIT(1.6.1,
    [
	CFLAGS="$CFLAGS $CPPUNIT_CFLAGS"
	CPPFLAGS="$CPPFLAGS $CPPUNIT_CFLAGS"
	LIBS="$LIBS $CPPUNIT_LIBS"
    ], [
	AC_MSG_ERROR(Couldn't Find CppUnit)
    ]
)
CPPFLAGS="$CPPFLAGS $CPPUNIT_CFLAGS"
LIBS="$LIBS $CPPUNIT_LIBS"

dnl Generate files
AC_OUTPUT([
	Makefile
	src/Makefile
])
