bin_PROGRAMS = process gobshite

process_SOURCES = \
		  ClientConnection.cpp ClientConnection.h \
		  process.cpp process_debug.h opfwd.h debug.h \
		  validator.cpp validator.h \
		  testOOG.cpp testOOG.h \
		  tests.cpp tests.h \
		  pythonInterface.cpp pythonInterface.h \
		  atlasUtils.cpp atlasUtils.h


gobshite_SOURCES = gobshite.cpp \
                   ClientConnection.cpp ClientConnection.h
