bin_PROGRAMS = process gobshite

process_SOURCES = \
		  ClientConnection.cpp ClientConnection.h \
		  process.cpp process_debug.h opfwd.h debug.h \
		  testOOG.cpp testOOG.h \
		  tests.cpp tests.h \
		  testIG.cpp testIG.h \
		  pythonInterface.cpp pythonInterface.h


gobshite_SOURCES = gobshite.cpp \
                   ClientConnection.cpp ClientConnection.h
