bin_PROGRAMS = process gobshite bint

process_SOURCES = \
		  ClientConnection.cpp ClientConnection.h \
		  process.cpp process_debug.h opfwd.h \
		  testOOG.cpp testOOG.h \
		  tests.cpp tests.h \
		  testLogin.cpp testLogin.h \
		  testCharacter.cpp testCharacter.h \
		  testIG.cpp testIG.h \
		  pythonInterface.cpp pythonInterface.h


gobshite_SOURCES = gobshite.cpp \
                   ClientConnection.cpp ClientConnection.h

bint_SOURCES = bint.cpp \
               ClientConnection.cpp ClientConnection.h
